# homeassistant-sinricpro

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  dev.sh  docker-compose.yml  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt  setup-hooks.ps1  setup-hooks.sh
.githooks/: README.md  pre-push  pre-push.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  hacs.yml  release.yml
custom_components/sinricpro/: __init__.py  api.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  cover.py  entity.py  event.py  exceptions.py  fan.py  light.py  lock.py  manifest.json  media_player.py  sensor.py  services.yaml  sse.py  strings.json  switch.py
custom_components/sinricpro/translations/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  sv.json  th.json  zh-Hans.json
tests/: __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_sensor.py  test_sse.py  test_switch.py
